@@ -1,0 +1,2 @@
+The whereabouts command gives a summary about the
+regions in which players are currently staying.
